--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.2.18",
     "axios": "^1.6.5",
     "cors": "^2.8.5",
+    "husky": "^9.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
@@ -55,7 +56,8 @@
   },
   "devDependencies": {
     "@types/react-input-mask": "^3.0.5",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
-    "prettier": "^3.2.4"
+    "prettier": "3.2.4"
   }
 }
