--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@types/react-dom": "^18.2.18",
     "axios": "^1.6.5",
     "cors": "^2.8.5",
-    "husky": "^9.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
@@ -34,12 +33,21 @@
     "test": "next start",
     "eject": "react-scripts eject",
     "lint": "next lint",
-    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
+    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
+    "prepare": "husky",
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{js,json,css,scss,html,md}": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "prettier"
     ]
   },
   "browserslist": {
@@ -58,6 +66,11 @@
     "@types/react-input-mask": "^3.0.5",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
+    "husky": "^9.0.7",
+    "lint-staged": "^15.2.1",
     "prettier": "3.2.4"
+  },
+  "script": {
+    "prepare": "husky install"
   }
 }
