--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "next build",
-    "test": "next start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "next lint",
-    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
-    "prepare": "husky",
-    "precommit": "lint-staged"
+    "lint": "eslint --ext \".ts,.tsx\" \"src/**/*.{ts,tsx,*.ts,*tsx}\"",
+    "lint:fix": "eslint --fix --ext \".ts,.tsx\" \"src/**/*.{ts,tsx,*.ts,*tsx}\"",
+    "prettier:check": "prettier --check --debug-check \"src/**/*.{ts,tsx,*.ts,*tsx}\"",
+    "prettier:format": "prettier --write \"src/**/*.{ts,tsx,*.ts,*tsx}\""
   },
   "lint-staged": {
     "*.{js,json,css,scss,html,md}": [
