--- a/package.json
+++ b/package.json
@@ -36,12 +36,11 @@
     "lint:fix": "eslint --fix --ext \".ts,.tsx\" \"src//*.{ts,tsx,*.ts,*tsx}\"",
     "prettier:check": "prettier --check --debug-check \"src//*.{ts,tsx,*.ts,*tsx}\"",
     "prettier:format": "prettier --write \"src//*.{ts,tsx,*.ts,*tsx}\"",
-"prepare": "husky install"
+    "prepare": "husky install"
   },
-"eslintConfig": {
+  "eslintConfig": {
     "extends": "react-app"
   },
-
   "browserslist": {
     "production": [
       ">0.2%",
@@ -58,7 +57,8 @@
     "@types/react-input-mask": "^3.0.5",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
-    "husky": "^9.0.7",
+    "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^8.0.0",
     "lint-staged": "^15.2.1",
     "prettier": "3.2.4"
   }
