--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,9 @@
 {
-  "semi": true,
-  "tabWidth": 2,
-  "printWidth": 90,
-  "singleQuote": true,
-  "bracketSpacing": true,
-  "trailingComma": "all"
-}
+    "semi": true,
+    "tabWidth": 2,
+    "printWidth": 90,
+    "singleQuote": true,
+    "bracketSpacing": true,
+    "trailingComma": "all",
+    "endOfLine": "auto"
+  }
