--- a/package.json
+++ b/package.json
@@ -34,12 +34,20 @@
     "eject": "react-scripts eject",
     "lint": "eslint --ext \".ts,.tsx\" \"src//*.{ts,tsx,*.ts,*tsx}\"",
     "lint:fix": "eslint --fix --ext \".ts,.tsx\" \"src//*.{ts,tsx,*.ts,*tsx}\"",
-    "prettier:check": "prettier --check --debug-check \"src//*.{ts,tsx,*.ts,*tsx}\"",
-    "prettier:format": "prettier --write \"src//*.{ts,tsx,*.ts,*tsx}\"",
     "prepare": "husky install"
   },
+  "lint-staged": {
+    "*.{js,json,css,scss,html,md}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest",
+      "prettier"
+    ]
   },
   "browserslist": {
     "production": [
@@ -57,9 +65,11 @@
     "@types/react-input-mask": "^3.0.5",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
     "husky": "^8.0.0",
     "lint-staged": "^15.2.1",
     "prettier": "3.2.4"
+  },
+  "script": {
+    "prepare": "husky install"
   }
 }
